[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/assets/PressStart.tres" type="DynamicFontData" id=1]
[ext_resource path="res://src/Menus/EndScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="EndScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.447059, 0.262745, 0.262745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 141.0
margin_top = 73.0
margin_right = 341.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 1 )
text = "The end"
align = 1

[node name="LabelStrikes" type="Label" parent="."]
margin_left = 183.0
margin_top = 103.0
margin_right = 223.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 2 )
text = "Strikes: "
align = 1

[node name="LabelHits" type="Label" parent="."]
margin_left = 183.0
margin_top = 124.0
margin_right = 279.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 3 )
text = "hits: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTime" type="Label" parent="."]
margin_left = 184.0
margin_top = 145.0
margin_right = 280.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 3 )
text = "time: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 184.0
margin_top = 173.0
margin_right = 308.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 4 )
text = "restart"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
